--- a/styles/portGenStyle.css
+++ b/styles/portGenStyle.css
@@ -6,6 +6,8 @@
 
 html, body{
     background: #f7f7f7;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .sectionAboutDiv{
